flux_includedir = $(includedir)/@PACKAGE@
flux_include_HEADERS = Array.h \
		       BitArray.h BitArray_impl.h charptr_array.h \
		       charptr_map.h Combinations.h cstringtools.h \
		       Error.h hash_functions.h \
		       MaskedArray.h \
		       IntegerMath.h \
                       fhash_map.h \
		       readstream.h fRegEx.h \
		       Sort.h Stat.h \
		       Conversions.h NLgetopt.h \
		       DynamicLibrary.h 

