flux_includedir = $(includedir)/@PACKAGE@
flux_include_HEADERS = GLabelMatrix.h GMatrix.h \
		       GMatrixOps.h GSMatrix.h GSMatrixOps.h GVector.h \
		       LAPackWrap.h \
		       MatrixInterface.h \
		       MMatrix.h MMatrixOps.h MVector.h \
		       SMatrix.h StandardForm.h PMatrix.h \
		       StoichMatrixInteger.h VectorInterface.h

