flux_includedir = $(includedir)/@PACKAGE@
flux_include_HEADERS = DOMErrorHandler.h DOMReader.h DOMReaderImpl.h \
		       DOMReaderImplL3.h DOMWriter.h DOMWriterImpl.h \
		       DOMWriterImplL3.h EntityResolver.h UnicodeTools.h \
		       XMLElement.h XMLException.h \
		       XMLFramework.h XMLUnicodeConstants.h

